--- a/EATS/test2/test2.csproj
+++ b/EATS/test2/test2.csproj
@@ -77,6 +77,9 @@
     <Compile Include="Pay.xaml.cs">
       <DependentUpon>Pay.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Pay2.xaml.cs">
+      <DependentUpon>Pay2.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Table.xaml.cs">
       <DependentUpon>Table.xaml</DependentUpon>
     </Compile>
@@ -105,6 +108,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pay.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pay2.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
